--- a/src/Infrastructure/General/Ciizo.Infrastructure.General/Ciizo.Infrastructure.General.csproj
+++ b/src/Infrastructure/General/Ciizo.Infrastructure.General/Ciizo.Infrastructure.General.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Exception\" />
+    <Folder Include="Logger\" />
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
 </Project>
