--- a/src/Services/Example/src/Ciizo.Example.Domain.Entities/Ciizo.Example.Domain.Entities.csproj
+++ b/src/Services/Example/src/Ciizo.Example.Domain.Entities/Ciizo.Example.Domain.Entities.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Helpers\" />
+    <ProjectReference Include="..\..\..\..\Infrastructure\Share\Ciizo.Infrastructure.Share\Ciizo.Infrastructure.Share.csproj" />
   </ItemGroup>
 
 </Project>
