add missing folder

--- a/src/Services/Example/src/Ciizo.Example.Domain.Entities/Ciizo.Example.Domain.Entities.csproj
+++ b/src/Services/Example/src/Ciizo.Example.Domain.Entities/Ciizo.Example.Domain.Entities.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="Helpers\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
